[gd_scene load_steps=9 format=3 uid="uid://ra2whys2ygsg"]

[ext_resource type="Script" uid="uid://erm7nnae3uo" path="res://scripts/trap_script.gd" id="1_h1dn0"]
[ext_resource type="Texture2D" uid="uid://cglpefrxtxp4e" path="res://assets/2D Pixel Dungeon Asset Pack/items and trap_animation/flamethrower/flamethrower_2_tile_set.png.png" id="2_fv2lu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1b6hs"]
atlas = ExtResource("2_fv2lu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkefd"]
atlas = ExtResource("2_fv2lu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6at07"]
atlas = ExtResource("2_fv2lu")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_re2ih"]
atlas = ExtResource("2_fv2lu")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_uar65"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b6hs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkefd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6at07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re2ih")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jy1lx"]
radius = 1.0
height = 10.0

[node name="TriggerTrap" type="Area2D"]
collision_mask = 2
script = ExtResource("1_h1dn0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uar65")
animation = &"shoot"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jy1lx")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
